{
  "version": 4,
  "terraform_version": "0.12.6",
  "serial": 136,
  "lineage": "611af14b-c643-0e64-19c1-d3eaa01dbb5e",
  "resources": [
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-686bb3b2",
            "domain": "vpc",
            "id": "eipalloc-0ba02506c1ae7b409",
            "network_interface": "eni-0951235df1cee9550",
            "private_dns": "ip-10-0-91-36.ap-south-1.compute.internal",
            "private_ip": "10.0.91.36",
            "public_dns": "ec2-35-154-171-139.ap-south-1.compute.amazonaws.com",
            "public_ip": "35.154.171.139",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "bigfish-Prod-ap-south-1b-nat-eip",
              "Terraform-prod": "true"
            },
            "vpc": true
          },
          "depends_on": [
            "aws_internet_gateway.this",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.notification-ec2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "pub_ip_fixed",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.app-ec2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "pub_ip_fixed",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.web-ec2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "pub_ip_fixed",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.jumpserver-ec2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "pub_ip_fixed",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0af9bbbb3f27f6712",
            "domain": "vpc",
            "id": "eipalloc-097840b347e35d49a",
            "instance": "i-0f4e9e5af8d8698ef",
            "network_interface": "eni-0759f5964b380d9aa",
            "private_dns": "ip-10-0-91-254.ap-south-1.compute.internal",
            "private_ip": "10.0.91.254",
            "public_dns": "ec2-3-7-137-20.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.7.137.20",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Prod",
              "Name": "bigfish-Prod-jumpserver-eip-1",
              "Terraform-prod": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.job-ec2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "pub_ip_fixed",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.captcha-ec2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "pub_ip_fixed",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.notification-ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0620d12a9cf777c87",
            "arn": "arn:aws:ec2:ap-south-1:238747170134:instance/i-0600c1da4d50faa28",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-monitoring-profile-prod",
            "id": "i-0600c1da4d50faa28",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "bigfish-Prod-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ba78684835f04acd",
            "private_dns": "ip-10-0-15-27.ap-south-1.compute.internal",
            "private_ip": "10.0.15.27",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0644f87663460225b",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04667e2b11f25b4dc",
            "tags": {
              "Environment": "Prod",
              "Name": "bigfish-Prod-notification-ec2-ap-south-1a-1",
              "Terraform-prod": "true"
            },
            "tenancy": "default",
            "volume_tags": {
              "Environment": "Prod",
              "Name": "bigfish-Prod-notification-root-ap-south-1a-1",
              "Terraform-prod": "true"
            },
            "vpc_security_group_ids": [
              "sg-0d069e417a13c0b29"
            ]
          },
          "depends_on": [
            "aws_ebs_volume.data",
            "data.template_cloudinit_config.config"
          ]
        }
      ]
    },
    {
      "module": "module.app-ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0620d12a9cf777c87",
            "arn": "arn:aws:ec2:ap-south-1:238747170134:instance/i-0184dd1432ec1d2c9",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-monitoring-profile-prod",
            "id": "i-0184dd1432ec1d2c9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "bigfish-Prod-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b6400ae589ce4ee3",
            "private_dns": "ip-10-0-1-131.ap-south-1.compute.internal",
            "private_ip": "10.0.1.131",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ec1b55f476b9ec24",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-053030f26deb9527e",
            "tags": {
              "Environment": "Prod",
              "Name": "bigfish-Prod-app-ec2-ap-south-1a-1",
              "Terraform-prod": "true"
            },
            "tenancy": "default",
            "volume_tags": {
              "Environment": "Prod",
              "Name": "bigfish-Prod-app-root-ap-south-1a-1",
              "Terraform-prod": "true"
            },
            "vpc_security_group_ids": [
              "sg-0f216c293429ce946"
            ]
          },
          "depends_on": [
            "aws_ebs_volume.data",
            "data.template_cloudinit_config.config"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0620d12a9cf777c87",
            "arn": "arn:aws:ec2:ap-south-1:238747170134:instance/i-044e9787fe2b08a0e",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-monitoring-profile-prod",
            "id": "i-044e9787fe2b08a0e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "bigfish-Prod-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d248704cad803983",
            "private_dns": "ip-10-0-2-204.ap-south-1.compute.internal",
            "private_ip": "10.0.2.204",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-05451a0833fed843e",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03dab89339533a3d5",
            "tags": {
              "Environment": "Prod",
              "Name": "bigfish-Prod-app-ec2-ap-south-1b-2",
              "Terraform-prod": "true"
            },
            "tenancy": "default",
            "volume_tags": {
              "Environment": "Prod",
              "Name": "bigfish-Prod-app-root-ap-south-1b-2",
              "Terraform-prod": "true"
            },
            "vpc_security_group_ids": [
              "sg-0f216c293429ce946"
            ]
          },
          "depends_on": [
            "aws_ebs_volume.data",
            "data.template_cloudinit_config.config"
          ]
        }
      ]
    },
    {
      "module": "module.web-ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0620d12a9cf777c87",
            "arn": "arn:aws:ec2:ap-south-1:238747170134:instance/i-0314b83b672da8ab8",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-monitoring-profile-prod",
            "id": "i-0314b83b672da8ab8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "bigfish-Prod-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05aefa9ed4a3aa8d2",
            "private_dns": "ip-10-0-10-242.ap-south-1.compute.internal",
            "private_ip": "10.0.10.242",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-073f3d4f6966d2bee",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bf669421a75bd7da",
            "tags": {
              "Environment": "Prod",
              "Name": "bigfish-Prod-web-ec2-ap-south-1a-1",
              "Terraform-prod": "true"
            },
            "tenancy": "default",
            "volume_tags": {
              "Environment": "Prod",
              "Name": "bigfish-Prod-web-root-ap-south-1a-1",
              "Terraform-prod": "true"
            },
            "vpc_security_group_ids": [
              "sg-0a200904a2fbe5f3c"
            ]
          },
          "depends_on": [
            "aws_ebs_volume.data",
            "data.template_cloudinit_config.config"
          ]
        }
      ]
    },
    {
      "module": "module.jumpserver-ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0620d12a9cf777c87",
            "arn": "arn:aws:ec2:ap-south-1:238747170134:instance/i-0f4e9e5af8d8698ef",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-monitoring-profile-prod",
            "id": "i-0f4e9e5af8d8698ef",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "bigfish-Prod-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0759f5964b380d9aa",
            "private_dns": "ip-10-0-91-254.ap-south-1.compute.internal",
            "private_ip": "10.0.91.254",
            "public_dns": "ec2-3-7-137-20.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.7.137.20",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0b17c8664dcdff4e5",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02b93e16bdd480654",
            "tags": {
              "Environment": "Prod",
              "Name": "bigfish-Prod-jumpserver-ec2-ap-south-1b-1",
              "Terraform-prod": "true"
            },
            "tenancy": "default",
            "volume_tags": {
              "Environment": "Prod",
              "Name": "bigfish-Prod-jumpserver-root-ap-south-1b-1",
              "Terraform-prod": "true"
            },
            "vpc_security_group_ids": [
              "sg-08160a150a609700e"
            ]
          },
          "depends_on": [
            "aws_ebs_volume.data",
            "data.template_cloudinit_config.config"
          ]
        }
      ]
    },
    {
      "module": "module.job-ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0620d12a9cf777c87",
            "arn": "arn:aws:ec2:ap-south-1:238747170134:instance/i-0dbe212508ff986bf",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-monitoring-profile-prod",
            "id": "i-0dbe212508ff986bf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "bigfish-Prod-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0764a30ea33d29e75",
            "private_dns": "ip-10-0-15-155.ap-south-1.compute.internal",
            "private_ip": "10.0.15.155",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-00f03fc36a461a454",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04667e2b11f25b4dc",
            "tags": {
              "Environment": "Prod",
              "Name": "bigfish-Prod-job-ec2-ap-south-1a-1",
              "Terraform-prod": "true"
            },
            "tenancy": "default",
            "volume_tags": {
              "Environment": "Prod",
              "Name": "bigfish-Prod-job-root-ap-south-1a-1",
              "Terraform-prod": "true"
            },
            "vpc_security_group_ids": [
              "sg-0095c1939741513fa"
            ]
          },
          "depends_on": [
            "aws_ebs_volume.data",
            "data.template_cloudinit_config.config"
          ]
        }
      ]
    },
    {
      "module": "module.captcha-ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0620d12a9cf777c87",
            "arn": "arn:aws:ec2:ap-south-1:238747170134:instance/i-029318d1e9fffbde6",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-monitoring-profile-prod",
            "id": "i-029318d1e9fffbde6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "bigfish-Prod-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ab36e8dcfa2299d3",
            "private_dns": "ip-10-0-16-70.ap-south-1.compute.internal",
            "private_ip": "10.0.16.70",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0601e581cdb144541",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b78aa2750b776834",
            "tags": {
              "Environment": "Prod",
              "Name": "bigfish-Prod-captcha-ec2-ap-south-1a-1",
              "Terraform-prod": "true"
            },
            "tenancy": "default",
            "volume_tags": {
              "Environment": "Prod",
              "Name": "bigfish-Prod-captcha-root-ap-south-1a-1",
              "Terraform-prod": "true"
            },
            "vpc_security_group_ids": [
              "sg-0091378963033fbaf"
            ]
          },
          "depends_on": [
            "aws_ebs_volume.data",
            "data.template_cloudinit_config.config"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "igw-00d16e2cd3d4a7e06",
            "owner_id": "238747170134",
            "tags": {
              "Name": "bigfish-Prod-igw",
              "Terraform-prod": "true"
            },
            "vpc_id": "vpc-052588afdee8dc628"
          }
        }
      ]
    },
    {
      "module": "module.main-alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "application",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:238747170134:loadbalancer/app/bigfish-Prod-alb/fe73271eebcc728f",
            "arn_suffix": "app/bigfish-Prod-alb/fe73271eebcc728f",
            "dns_name": "bigfish-Prod-alb-1986728176.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:238747170134:loadbalancer/app/bigfish-Prod-alb/fe73271eebcc728f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "bigfish-Prod-alb",
            "security_groups": [
              "sg-0b509bebe696e6db0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07e8a9fdaabe540b1"
              },
              {
                "subnet_id": "subnet-0f8ba99652c8ebf3f"
              }
            ],
            "subnets": [
              "subnet-07e8a9fdaabe540b1",
              "subnet-0f8ba99652c8ebf3f"
            ],
            "tags": {
              "Environment": "Prod",
              "Name": "bigfish-Prod-alb",
              "Terraform-prod": "true"
            },
            "vpc_id": "vpc-052588afdee8dc628",
            "zone_id": "ZP97RAFLXTNZK"
          }
        }
      ]
    },
    {
      "module": "module.main-alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:238747170134:listener/app/bigfish-Prod-alb/fe73271eebcc728f/fcfe0d6e3b3a6d0b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:238747170134:listener/app/bigfish-Prod-alb/fe73271eebcc728f/fcfe0d6e3b3a6d0b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:238747170134:loadbalancer/app/bigfish-Prod-alb/fe73271eebcc728f",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.application",
            "aws_lb_target_group.web_target_group"
          ]
        }
      ]
    },
    {
      "module": "module.main-alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_https",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:238747170134:listener/app/bigfish-Prod-alb/fe73271eebcc728f/c57f53b8c95479ad",
            "certificate_arn": "arn:aws:iam::238747170134:server-certificate/bigfish-Prod-cert-23874717013420200513062031009600000001",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:238747170134:targetgroup/web-prod-http-target-group/0ed986144c3abf7b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:238747170134:listener/app/bigfish-Prod-alb/fe73271eebcc728f/c57f53b8c95479ad",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:238747170134:loadbalancer/app/bigfish-Prod-alb/fe73271eebcc728f",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-TLS-1-2-2017-01",
            "timeouts": null
          },
          "depends_on": [
            "aws_iam_server_certificate.ssl_cert[0]",
            "aws_lb.application",
            "aws_lb_target_group.web_target_group"
          ]
        }
      ]
    },
    {
      "module": "module.main-alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "app_https_rule",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:238747170134:targetgroup/app-prod-http-targets-group/67bc9ba7a4b663d1",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:238747170134:listener-rule/app/bigfish-Prod-alb/fe73271eebcc728f/c57f53b8c95479ad/aa9b827df030b9f1",
            "condition": [
              {
                "field": "path-pattern",
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/bigfishserver/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": [],
                "values": [
                  "/bigfishserver/*"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:238747170134:listener-rule/app/bigfish-Prod-alb/fe73271eebcc728f/c57f53b8c95479ad/aa9b827df030b9f1",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:238747170134:listener/app/bigfish-Prod-alb/fe73271eebcc728f/c57f53b8c95479ad",
            "priority": 1
          },
          "depends_on": [
            "aws_lb_listener.frontend_https[0]",
            "aws_lb_target_group.app_target_group"
          ]
        }
      ]
    },
    {
      "module": "module.main-alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "web_https_rule",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:238747170134:targetgroup/web-prod-http-target-group/0ed986144c3abf7b",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:238747170134:listener-rule/app/bigfish-Prod-alb/fe73271eebcc728f/c57f53b8c95479ad/a58956ba8989da6f",
            "condition": [
              {
                "field": "path-pattern",
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": [],
                "values": [
                  "/"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:238747170134:listener-rule/app/bigfish-Prod-alb/fe73271eebcc728f/c57f53b8c95479ad/a58956ba8989da6f",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:238747170134:listener/app/bigfish-Prod-alb/fe73271eebcc728f/c57f53b8c95479ad",
            "priority": 2
          },
          "depends_on": [
            "aws_lb_listener.frontend_https[0]",
            "aws_lb_target_group.web_target_group"
          ]
        }
      ]
    },
    {
      "module": "module.main-alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_target_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:238747170134:targetgroup/app-prod-http-targets-group/67bc9ba7a4b663d1",
            "arn_suffix": "targetgroup/app-prod-http-targets-group/67bc9ba7a4b663d1",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200-301",
                "path": "/bigfishserver/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:238747170134:targetgroup/app-prod-http-targets-group/67bc9ba7a4b663d1",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "app-prod-http-targets-group",
            "port": 5000,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "Prod",
              "Name": "app-prod-http-targets-group",
              "Terraform-prod": "true"
            },
            "target_type": "instance",
            "vpc_id": "vpc-052588afdee8dc628"
          },
          "depends_on": [
            "aws_lb.application"
          ]
        }
      ]
    },
    {
      "module": "module.main-alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web_target_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:238747170134:targetgroup/web-prod-http-target-group/0ed986144c3abf7b",
            "arn_suffix": "targetgroup/web-prod-http-target-group/0ed986144c3abf7b",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200-301",
                "path": "/index.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:238747170134:targetgroup/web-prod-http-target-group/0ed986144c3abf7b",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "web-prod-http-target-group",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "Prod",
              "Name": "web-prod-http-target-group",
              "Terraform-prod": "true"
            },
            "target_type": "instance",
            "vpc_id": "vpc-052588afdee8dc628"
          },
          "depends_on": [
            "aws_lb.application"
          ]
        }
      ]
    },
    {
      "module": "module.main-alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "app_http_target_attachment",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:238747170134:targetgroup/app-prod-http-targets-group/67bc9ba7a4b663d1-20200505120631746800000004",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:238747170134:targetgroup/app-prod-http-targets-group/67bc9ba7a4b663d1",
            "target_id": "i-0184dd1432ec1d2c9"
          },
          "depends_on": [
            "aws_lb_target_group.app_target_group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:238747170134:targetgroup/app-prod-http-targets-group/67bc9ba7a4b663d1-20200505120631711000000003",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:238747170134:targetgroup/app-prod-http-targets-group/67bc9ba7a4b663d1",
            "target_id": "i-044e9787fe2b08a0e"
          },
          "depends_on": [
            "aws_lb_target_group.app_target_group"
          ]
        }
      ]
    },
    {
      "module": "module.main-alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web_http_target_attachment",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:238747170134:targetgroup/web-prod-http-target-group/0ed986144c3abf7b-20200505120619741200000002",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:238747170134:targetgroup/web-prod-http-target-group/0ed986144c3abf7b",
            "target_id": "i-0314b83b672da8ab8"
          },
          "depends_on": [
            "aws_lb_target_group.web_target_group"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ba02506c1ae7b409",
            "id": "nat-0a21f9253cbe35560",
            "network_interface_id": "eni-0951235df1cee9550",
            "private_ip": "10.0.91.36",
            "public_ip": "35.154.171.139",
            "subnet_id": "subnet-02b93e16bdd480654",
            "tags": {
              "Name": "bigfish-Prod-ap-south-1b-nat",
              "Terraform-prod": "true"
            }
          },
          "depends_on": [
            "aws_internet_gateway.this",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "app",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "captcha",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "lb",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "notification",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "rds",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "web",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "app_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "app_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "captcha_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "captcha_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "lb_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "lb_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "notification_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "notification_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "rds_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "rds_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "web_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "web_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "app_nat_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00808fcfa4ad32e9c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0a21f9253cbe35560",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00808fcfa4ad32e9c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_nat_gateway.this",
            "aws_route_table.app"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "captcha_nat_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0df37f31abb76a2fb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0a21f9253cbe35560",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0df37f31abb76a2fb",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_nat_gateway.this",
            "aws_route_table.captcha"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "lb_internet_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00d16e2cd3d4a7e06",
            "id": "r-rtb-0f31e65086af9e43d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f31e65086af9e43d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.this[0]",
            "aws_route_table.lb[0]"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "notification_nat_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b1c3136bc3956e0d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0a21f9253cbe35560",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b1c3136bc3956e0d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_nat_gateway.this",
            "aws_route_table.notification"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00d16e2cd3d4a7e06",
            "id": "r-rtb-013acc744b2029da41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-013acc744b2029da4",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.this[0]",
            "aws_route_table.public[0]"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "rds_internet_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "web_nat_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0713a8e5a43bd4bb11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0a21f9253cbe35560",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0713a8e5a43bd4bb1",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_nat_gateway.this",
            "aws_route_table.web"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00808fcfa4ad32e9c",
            "owner_id": "238747170134",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0a21f9253cbe35560",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bigfish-Prod-app-rt",
              "Terraform-prod": "true"
            },
            "vpc_id": "vpc-052588afdee8dc628"
          }
        }
      ]
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "captcha",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0df37f31abb76a2fb",
            "owner_id": "238747170134",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0a21f9253cbe35560",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bigfish-Prod-captcha-rt",
              "Terraform-prod": "true"
            },
            "vpc_id": "vpc-052588afdee8dc628"
          }
        }
      ]
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "lb",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f31e65086af9e43d",
            "owner_id": "238747170134",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00d16e2cd3d4a7e06",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bigfish-Prod-lb-rt",
              "Terraform-prod": "true"
            },
            "vpc_id": "vpc-052588afdee8dc628"
          }
        }
      ]
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "notification",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b1c3136bc3956e0d",
            "owner_id": "238747170134",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0a21f9253cbe35560",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bigfish-Prod-notification-rt",
              "Terraform-prod": "true"
            },
            "vpc_id": "vpc-052588afdee8dc628"
          }
        }
      ]
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-013acc744b2029da4",
            "owner_id": "238747170134",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00d16e2cd3d4a7e06",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bigfish-Prod-jumpserver-rt",
              "Terraform-prod": "true"
            },
            "vpc_id": "vpc-052588afdee8dc628"
          }
        }
      ]
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rds",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0713a8e5a43bd4bb1",
            "owner_id": "238747170134",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0a21f9253cbe35560",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bigfish-Prod-web-rt",
              "Terraform-prod": "true"
            },
            "vpc_id": "vpc-052588afdee8dc628"
          }
        }
      ]
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0efa2ad66e7235239",
            "route_table_id": "rtb-00808fcfa4ad32e9c",
            "subnet_id": "subnet-053030f26deb9527e"
          },
          "depends_on": [
            "aws_route_table.app",
            "aws_subnet.app"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de9f66db85dc13bc",
            "route_table_id": "rtb-00808fcfa4ad32e9c",
            "subnet_id": "subnet-03dab89339533a3d5"
          },
          "depends_on": [
            "aws_route_table.app",
            "aws_subnet.app"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "captcha",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0637c2cf72c7dfc71",
            "route_table_id": "rtb-0df37f31abb76a2fb",
            "subnet_id": "subnet-0b78aa2750b776834"
          },
          "depends_on": [
            "aws_route_table.captcha",
            "aws_subnet.captcha"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lb",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0131f273246ee39b3",
            "route_table_id": "rtb-0f31e65086af9e43d",
            "subnet_id": "subnet-0f8ba99652c8ebf3f"
          },
          "depends_on": [
            "aws_route_table.lb[0]",
            "aws_subnet.lb"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0249d100c3741a7c7",
            "route_table_id": "rtb-0f31e65086af9e43d",
            "subnet_id": "subnet-07e8a9fdaabe540b1"
          },
          "depends_on": [
            "aws_route_table.lb[0]",
            "aws_subnet.lb"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "notification",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a2c701f9ccaa5917",
            "route_table_id": "rtb-0b1c3136bc3956e0d",
            "subnet_id": "subnet-04667e2b11f25b4dc"
          },
          "depends_on": [
            "aws_route_table.notification",
            "aws_subnet.notification"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d6fd5def4a01a947",
            "route_table_id": "rtb-013acc744b2029da4",
            "subnet_id": "subnet-02b93e16bdd480654"
          },
          "depends_on": [
            "aws_route_table.public[0]",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rds",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0654f25960dab4a5c",
            "route_table_id": "rtb-00808fcfa4ad32e9c",
            "subnet_id": "subnet-049a210e6f8ab1b79"
          },
          "depends_on": [
            "aws_route_table.app",
            "aws_route_table.rds",
            "aws_subnet.rds"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d169dde25e8ebb4",
            "route_table_id": "rtb-00808fcfa4ad32e9c",
            "subnet_id": "subnet-0a5b76f778d65aefd"
          },
          "depends_on": [
            "aws_route_table.app",
            "aws_route_table.rds",
            "aws_subnet.rds"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ccff361fdad1cfa",
            "route_table_id": "rtb-0713a8e5a43bd4bb1",
            "subnet_id": "subnet-0bf669421a75bd7da"
          },
          "depends_on": [
            "aws_route_table.web",
            "aws_subnet.web"
          ]
        }
      ]
    },
    {
      "module": "module.main-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:238747170134:security-group/sg-0f216c293429ce946",
            "description": "Security Group for Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all connections to internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f216c293429ce946",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.10.0/24"
                ],
                "description": "Allow web connections from webserver",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "10.0.61.0/24",
                  "10.0.62.0/24"
                ],
                "description": "Allow HTTP connections from Load Balancer",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.61.0/24",
                  "10.0.62.0/24"
                ],
                "description": "Allow app connections from Load Balancer",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "10.0.91.0/24"
                ],
                "description": "Allow HTTP connections from jumpserver Resources",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.91.0/24"
                ],
                "description": "Allow SSH connections from Management Resources",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.91.0/24"
                ],
                "description": "Allow app connections from jumpserver Resources",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "10.0.91.254/32"
                ],
                "description": "Allow gmetrics monitoring connections from jumpserver",
                "from_port": 5666,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5666
              }
            ],
            "name": "bigfish-Prod-app-sg",
            "name_prefix": null,
            "owner_id": "238747170134",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bigfish-Prod-app-sg",
              "Terraform-prod": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-052588afdee8dc628"
          }
        }
      ]
    },
    {
      "module": "module.main-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "captcha",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:238747170134:security-group/sg-0091378963033fbaf",
            "description": "Security Group for captcha instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all connections to internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0091378963033fbaf",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24"
                ],
                "description": "Allow connections from App Subnet",
                "from_port": 8280,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8280
              },
              {
                "cidr_blocks": [
                  "10.0.91.0/24"
                ],
                "description": "Allow SSH connections from JumpServer Resources",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.91.254/32"
                ],
                "description": "Allow gmetrics monitoring connections from jumpserver",
                "from_port": 5666,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5666
              }
            ],
            "name": "bigfish-Prod-captcha-sg",
            "name_prefix": null,
            "owner_id": "238747170134",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bigfish-Prod-captcha-sg",
              "Terraform-prod": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-052588afdee8dc628"
          }
        }
      ]
    },
    {
      "module": "module.main-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "job",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:238747170134:security-group/sg-0095c1939741513fa",
            "description": "Security Group for job instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all connections to internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0095c1939741513fa",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24"
                ],
                "description": "Allow connections from App Subnet",
                "from_port": 5672,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5672
              },
              {
                "cidr_blocks": [
                  "10.0.91.0/24"
                ],
                "description": "Allow SSH connections from JumpServer Resources",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.91.254/32"
                ],
                "description": "Allow gmetrics monitoring connections from jumpserver",
                "from_port": 5666,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5666
              }
            ],
            "name": "bigfish-Prod-job-sg",
            "name_prefix": null,
            "owner_id": "238747170134",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bigfish-Prod-job-sg",
              "Terraform-prod": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-052588afdee8dc628"
          }
        }
      ]
    },
    {
      "module": "module.main-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jumpserver",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:238747170134:security-group/sg-08160a150a609700e",
            "description": "Security Group for JumpServer Resources",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all connections to internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08160a150a609700e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH connections from internet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "13.126.151.121/32"
                ],
                "description": "Allow gmetrics monitoring connections from monitoring server",
                "from_port": 5666,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5666
              },
              {
                "cidr_blocks": [
                  "13.126.151.121/32"
                ],
                "description": "Allow gmetrics monitoring connections from monitoring server",
                "from_port": 5667,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5667
              },
              {
                "cidr_blocks": [
                  "13.126.151.121/32"
                ],
                "description": "Allow gmetrics monitoring connections from monitoring server",
                "from_port": 5668,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5668
              },
              {
                "cidr_blocks": [
                  "13.126.151.121/32"
                ],
                "description": "Allow gmetrics monitoring connections from monitoring server",
                "from_port": 5669,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5669
              },
              {
                "cidr_blocks": [
                  "13.126.151.121/32"
                ],
                "description": "Allow gmetrics monitoring connections from monitoring server",
                "from_port": 5670,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5670
              },
              {
                "cidr_blocks": [
                  "13.126.151.121/32"
                ],
                "description": "Allow gmetrics monitoring connections from monitoring server",
                "from_port": 5671,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5671
              },
              {
                "cidr_blocks": [
                  "13.126.151.121/32"
                ],
                "description": "Allow gmetrics monitoring connections from monitoring server",
                "from_port": 5672,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5672
              }
            ],
            "name": "bigfish-Prod-jumpserver-sg",
            "name_prefix": null,
            "owner_id": "238747170134",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bigfish-Prod-jumpserver-sg",
              "Terraform-prod": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-052588afdee8dc628"
          }
        }
      ]
    },
    {
      "module": "module.main-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:238747170134:security-group/sg-0b509bebe696e6db0",
            "description": "Security Group for Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all connections to internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b509bebe696e6db0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP connections from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS connections from internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "bigfish-Prod-lb-sg",
            "name_prefix": null,
            "owner_id": "238747170134",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bigfish-Prod-lb-sg",
              "Terraform-prod": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-052588afdee8dc628"
          }
        }
      ]
    },
    {
      "module": "module.main-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "notification",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:238747170134:security-group/sg-0d069e417a13c0b29",
            "description": "Security Group for notification instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all connections to internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d069e417a13c0b29",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24"
                ],
                "description": "Allow connections from App Subnet",
                "from_port": 5672,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5672
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24"
                ],
                "description": "Allow connections from App Subnet",
                "from_port": 5678,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5678
              },
              {
                "cidr_blocks": [
                  "10.0.15.0/24"
                ],
                "description": "Allow connections from notification Subnet",
                "from_port": 5672,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5672
              },
              {
                "cidr_blocks": [
                  "10.0.91.0/24"
                ],
                "description": "Allow SSH connections from JumpServer Resources",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.91.254/32"
                ],
                "description": "Allow gmetrics monitoring connections from jumpserver",
                "from_port": 5666,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5666
              }
            ],
            "name": "bigfish-Prod-notification-sg",
            "name_prefix": null,
            "owner_id": "238747170134",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bigfish-Prod-notification-sg",
              "Terraform-prod": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-052588afdee8dc628"
          }
        }
      ]
    },
    {
      "module": "module.main-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:238747170134:security-group/sg-0bbec7b73892db857",
            "description": "Security Group for RDS Database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all connections to internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bbec7b73892db857",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24",
                  "10.0.91.0/24",
                  "10.0.15.0/24"
                ],
                "description": "Allow db connections from Application, JumpServer Resources",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "bigfish-Prod-rds-sg",
            "name_prefix": null,
            "owner_id": "238747170134",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bigfish-Prod-rds-sg",
              "Terraform-prod": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-052588afdee8dc628"
          }
        }
      ]
    },
    {
      "module": "module.main-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:238747170134:security-group/sg-0a200904a2fbe5f3c",
            "description": "Security Group for web instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all connections to internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a200904a2fbe5f3c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.61.0/24",
                  "10.0.62.0/24"
                ],
                "description": "Allow HTTP connections from Load Balancer",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.91.0/24"
                ],
                "description": "Allow HTTP connections from JumpServer Resources",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.91.0/24"
                ],
                "description": "Allow SSH connections from JumpServer Resources",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.91.254/32"
                ],
                "description": "Allow gmetrics monitoring connections from jumpserver",
                "from_port": 5666,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5666
              }
            ],
            "name": "bigfish-Prod-web-sg",
            "name_prefix": null,
            "owner_id": "238747170134",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bigfish-Prod-web-sg",
              "Terraform-prod": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-052588afdee8dc628"
          }
        }
      ]
    },
    {
      "module": "module.main-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app_egress",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all connections to internet",
            "from_port": 0,
            "id": "sgrule-2721704459",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0f216c293429ce946",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.app[0]"
          ]
        }
      ]
    },
    {
      "module": "module.main-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app_ingress",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.91.0/24"
            ],
            "description": "Allow SSH connections from Management Resources",
            "from_port": 22,
            "id": "sgrule-418227643",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f216c293429ce946",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.app[0]"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.91.0/24"
            ],
            "description": "Allow app connections from jumpserver Resources",
            "from_port": 5000,
            "id": "sgrule-2865406321",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f216c293429ce946",
            "self": false,
            "source_security_group_id": null,
            "to_port": 5000,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.app[0]"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.91.0/24"
            ],
            "description": "Allow HTTP connections from jumpserver Resources",
            "from_port": 80,
            "id": "sgrule-3640709329",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f216c293429ce946",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.app[0]"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.61.0/24",
              "10.0.62.0/24"
            ],
            "description": "Allow HTTP connections from Load Balancer",
            "from_port": 80,
            "id": "sgrule-835845379",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f216c293429ce946",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.app[0]"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.61.0/24",
              "10.0.62.0/24"
            ],
            "description": "Allow app connections from Load Balancer",
            "from_port": 5000,
            "id": "sgrule-3276936213",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f216c293429ce946",
            "self": false,
            "source_security_group_id": null,
            "to_port": 5000,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.app[0]"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.10.0/24"
            ],
            "description": "Allow web connections from webserver",
            "from_port": 5000,
            "id": "sgrule-3747131760",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f216c293429ce946",
            "self": false,
            "source_security_group_id": null,
            "to_port": 5000,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.app[0]"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.91.254/32"
            ],
            "description": "Allow gmetrics monitoring connections from jumpserver",
            "from_port": 5666,
            "id": "sgrule-3050861340",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f216c293429ce946",
            "self": false,
            "source_security_group_id": null,
            "to_port": 5666,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.app[0]"
          ]
        }
      ]
    },
    {
      "module": "module.main-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "captcha_egress",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all connections to internet",
            "from_port": 0,
            "id": "sgrule-3658040196",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0091378963033fbaf",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.captcha[0]"
          ]
        }
      ]
    },
    {
      "module": "module.main-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "captcha_ingress",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.91.0/24"
            ],
            "description": "Allow SSH connections from JumpServer Resources",
            "from_port": 22,
            "id": "sgrule-4164751118",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0091378963033fbaf",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.captcha[0]"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.1.0/24",
              "10.0.2.0/24"
            ],
            "description": "Allow connections from App Subnet",
            "from_port": 8280,
            "id": "sgrule-778235369",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0091378963033fbaf",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8280,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.captcha[0]"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.91.254/32"
            ],
            "description": "Allow gmetrics monitoring connections from jumpserver",
            "from_port": 5666,
            "id": "sgrule-1258168276",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0091378963033fbaf",
            "self": false,
            "source_security_group_id": null,
            "to_port": 5666,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.captcha[0]"
          ]
        }
      ]
    },
    {
      "module": "module.main-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "job_egress",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all connections to internet",
            "from_port": 0,
            "id": "sgrule-340480882",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0095c1939741513fa",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.job[0]"
          ]
        }
      ]
    },
    {
      "module": "module.main-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "job_ingress",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.91.0/24"
            ],
            "description": "Allow SSH connections from JumpServer Resources",
            "from_port": 22,
            "id": "sgrule-565009741",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0095c1939741513fa",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.job[0]"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.1.0/24",
              "10.0.2.0/24"
            ],
            "description": "Allow connections from App Subnet",
            "from_port": 5672,
            "id": "sgrule-753592823",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0095c1939741513fa",
            "self": false,
            "source_security_group_id": null,
            "to_port": 5672,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.job[0]"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.91.254/32"
            ],
            "description": "Allow gmetrics monitoring connections from jumpserver",
            "from_port": 5666,
            "id": "sgrule-3203994790",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0095c1939741513fa",
            "self": false,
            "source_security_group_id": null,
            "to_port": 5666,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.job[0]"
          ]
        }
      ]
    },
    {
      "module": "module.main-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "jumpserver_egress",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all connections to internet",
            "from_port": 0,
            "id": "sgrule-3514156503",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-08160a150a609700e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.jumpserver[0]"
          ]
        }
      ]
    },
    {
      "module": "module.main-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "jumpserver_ingress",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow SSH connections from internet",
            "from_port": 22,
            "id": "sgrule-818814012",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08160a150a609700e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.jumpserver[0]"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "13.126.151.121/32"
            ],
            "description": "Allow gmetrics monitoring connections from monitoring server",
            "from_port": 5666,
            "id": "sgrule-4040618365",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08160a150a609700e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 5666,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.jumpserver[0]"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "13.126.151.121/32"
            ],
            "description": "Allow gmetrics monitoring connections from monitoring server",
            "from_port": 5667,
            "id": "sgrule-2180834248",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08160a150a609700e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 5667,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.jumpserver[0]"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "13.126.151.121/32"
            ],
            "description": "Allow gmetrics monitoring connections from monitoring server",
            "from_port": 5668,
            "id": "sgrule-854131112",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08160a150a609700e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 5668,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.jumpserver[0]"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "13.126.151.121/32"
            ],
            "description": "Allow gmetrics monitoring connections from monitoring server",
            "from_port": 5669,
            "id": "sgrule-1136857885",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08160a150a609700e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 5669,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.jumpserver[0]"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "13.126.151.121/32"
            ],
            "description": "Allow gmetrics monitoring connections from monitoring server",
            "from_port": 5670,
            "id": "sgrule-3055678867",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08160a150a609700e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 5670,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.jumpserver[0]"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "13.126.151.121/32"
            ],
            "description": "Allow gmetrics monitoring connections from monitoring server",
            "from_port": 5671,
            "id": "sgrule-3339446054",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08160a150a609700e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 5671,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.jumpserver[0]"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "13.126.151.121/32"
            ],
            "description": "Allow gmetrics monitoring connections from monitoring server",
            "from_port": 5672,
            "id": "sgrule-1417007353",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08160a150a609700e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 5672,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.jumpserver[0]"
          ]
        }
      ]
    },
    {
      "module": "module.main-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lb_egress",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all connections to internet",
            "from_port": 0,
            "id": "sgrule-366428713",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0b509bebe696e6db0",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.lb[0]"
          ]
        }
      ]
    },
    {
      "module": "module.main-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lb_ingress",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTP connections from internet",
            "from_port": 80,
            "id": "sgrule-1767206259",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b509bebe696e6db0",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.lb[0]"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTPS connections from internet",
            "from_port": 443,
            "id": "sgrule-2435988599",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b509bebe696e6db0",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.lb[0]"
          ]
        }
      ]
    },
    {
      "module": "module.main-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "notification_egress",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all connections to internet",
            "from_port": 0,
            "id": "sgrule-1978496036",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0d069e417a13c0b29",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.notification[0]"
          ]
        }
      ]
    },
    {
      "module": "module.main-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "notification_ingress",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.91.0/24"
            ],
            "description": "Allow SSH connections from JumpServer Resources",
            "from_port": 22,
            "id": "sgrule-2547517888",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d069e417a13c0b29",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.notification[0]"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.1.0/24",
              "10.0.2.0/24"
            ],
            "description": "Allow connections from App Subnet",
            "from_port": 5672,
            "id": "sgrule-2630622293",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d069e417a13c0b29",
            "self": false,
            "source_security_group_id": null,
            "to_port": 5672,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.notification[0]"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.1.0/24",
              "10.0.2.0/24"
            ],
            "description": "Allow connections from App Subnet",
            "from_port": 5678,
            "id": "sgrule-820399019",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d069e417a13c0b29",
            "self": false,
            "source_security_group_id": null,
            "to_port": 5678,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.notification[0]"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.15.0/24"
            ],
            "description": "Allow connections from notification Subnet",
            "from_port": 5672,
            "id": "sgrule-359615865",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d069e417a13c0b29",
            "self": false,
            "source_security_group_id": null,
            "to_port": 5672,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.notification[0]"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.91.254/32"
            ],
            "description": "Allow gmetrics monitoring connections from jumpserver",
            "from_port": 5666,
            "id": "sgrule-1282844839",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d069e417a13c0b29",
            "self": false,
            "source_security_group_id": null,
            "to_port": 5666,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.notification[0]"
          ]
        }
      ]
    },
    {
      "module": "module.main-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_egress",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all connections to internet",
            "from_port": 0,
            "id": "sgrule-1316310272",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0bbec7b73892db857",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.rds[0]"
          ]
        }
      ]
    },
    {
      "module": "module.main-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_ingress",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.1.0/24",
              "10.0.2.0/24",
              "10.0.91.0/24",
              "10.0.15.0/24"
            ],
            "description": "Allow db connections from Application, JumpServer Resources",
            "from_port": 3306,
            "id": "sgrule-4223844847",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bbec7b73892db857",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.rds[0]"
          ]
        }
      ]
    },
    {
      "module": "module.main-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web_egress",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all connections to internet",
            "from_port": 0,
            "id": "sgrule-3043721159",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0a200904a2fbe5f3c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.web[0]"
          ]
        }
      ]
    },
    {
      "module": "module.main-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web_ingress",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.91.0/24"
            ],
            "description": "Allow SSH connections from JumpServer Resources",
            "from_port": 22,
            "id": "sgrule-3188066659",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a200904a2fbe5f3c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.web[0]"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.61.0/24",
              "10.0.62.0/24"
            ],
            "description": "Allow HTTP connections from Load Balancer",
            "from_port": 80,
            "id": "sgrule-530357220",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a200904a2fbe5f3c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.web[0]"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.91.0/24"
            ],
            "description": "Allow HTTP connections from JumpServer Resources",
            "from_port": 80,
            "id": "sgrule-2146139145",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a200904a2fbe5f3c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.web[0]"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.91.254/32"
            ],
            "description": "Allow gmetrics monitoring connections from jumpserver",
            "from_port": 5666,
            "id": "sgrule-585725986",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a200904a2fbe5f3c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 5666,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.web[0]"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:238747170134:subnet/subnet-053030f26deb9527e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-053030f26deb9527e",
            "map_public_ip_on_launch": false,
            "owner_id": "238747170134",
            "tags": {
              "Name": "bigfish-Prod-app-ap-south-1a-subnet",
              "Terraform-prod": "true"
            },
            "vpc_id": "vpc-052588afdee8dc628"
          },
          "depends_on": [
            "aws_nat_gateway.this",
            "aws_route.app_nat_gateway"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:238747170134:subnet/subnet-03dab89339533a3d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-03dab89339533a3d5",
            "map_public_ip_on_launch": false,
            "owner_id": "238747170134",
            "tags": {
              "Name": "bigfish-Prod-app-ap-south-1b-subnet",
              "Terraform-prod": "true"
            },
            "vpc_id": "vpc-052588afdee8dc628"
          },
          "depends_on": [
            "aws_nat_gateway.this",
            "aws_route.app_nat_gateway"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "captcha",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:238747170134:subnet/subnet-0b78aa2750b776834",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.16.0/24",
            "id": "subnet-0b78aa2750b776834",
            "map_public_ip_on_launch": false,
            "owner_id": "238747170134",
            "tags": {
              "Name": "bigfish-Prod-captcha-ap-south-1a-subnet",
              "Terraform-prod": "true"
            },
            "vpc_id": "vpc-052588afdee8dc628"
          },
          "depends_on": [
            "aws_nat_gateway.this"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lb",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:238747170134:subnet/subnet-0f8ba99652c8ebf3f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.61.0/24",
            "id": "subnet-0f8ba99652c8ebf3f",
            "map_public_ip_on_launch": false,
            "owner_id": "238747170134",
            "tags": {
              "Name": "bigfish-Prod-lb-ap-south-1a-subnet",
              "Terraform-prod": "true"
            },
            "vpc_id": "vpc-052588afdee8dc628"
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:238747170134:subnet/subnet-07e8a9fdaabe540b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.62.0/24",
            "id": "subnet-07e8a9fdaabe540b1",
            "map_public_ip_on_launch": false,
            "owner_id": "238747170134",
            "tags": {
              "Name": "bigfish-Prod-lb-ap-south-1b-subnet",
              "Terraform-prod": "true"
            },
            "vpc_id": "vpc-052588afdee8dc628"
          }
        }
      ]
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "notification",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:238747170134:subnet/subnet-04667e2b11f25b4dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.15.0/24",
            "id": "subnet-04667e2b11f25b4dc",
            "map_public_ip_on_launch": false,
            "owner_id": "238747170134",
            "tags": {
              "Name": "bigfish-Prod-notification-ap-south-1a-subnet",
              "Terraform-prod": "true"
            },
            "vpc_id": "vpc-052588afdee8dc628"
          },
          "depends_on": [
            "aws_nat_gateway.this"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:238747170134:subnet/subnet-02b93e16bdd480654",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.91.0/24",
            "id": "subnet-02b93e16bdd480654",
            "map_public_ip_on_launch": true,
            "owner_id": "238747170134",
            "tags": {
              "Name": "bigfish-Prod-jumpserver-ap-south-1b-subnet",
              "Terraform-prod": "true"
            },
            "vpc_id": "vpc-052588afdee8dc628"
          }
        }
      ]
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rds",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:238747170134:subnet/subnet-049a210e6f8ab1b79",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.21.0/24",
            "id": "subnet-049a210e6f8ab1b79",
            "map_public_ip_on_launch": false,
            "owner_id": "238747170134",
            "tags": {
              "Name": "bigfish-Prod-rds-ap-south-1a-subnet",
              "Terraform-prod": "true"
            },
            "vpc_id": "vpc-052588afdee8dc628"
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:238747170134:subnet/subnet-0a5b76f778d65aefd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.22.0/24",
            "id": "subnet-0a5b76f778d65aefd",
            "map_public_ip_on_launch": false,
            "owner_id": "238747170134",
            "tags": {
              "Name": "bigfish-Prod-rds-ap-south-1b-subnet",
              "Terraform-prod": "true"
            },
            "vpc_id": "vpc-052588afdee8dc628"
          }
        }
      ]
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:238747170134:subnet/subnet-0bf669421a75bd7da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-0bf669421a75bd7da",
            "map_public_ip_on_launch": false,
            "owner_id": "238747170134",
            "tags": {
              "Name": "bigfish-Prod-web-ap-south-1a-subnet",
              "Terraform-prod": "true"
            },
            "vpc_id": "vpc-052588afdee8dc628"
          },
          "depends_on": [
            "aws_nat_gateway.this"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:238747170134:vpc/vpc-052588afdee8dc628",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bb41d8c25aa9bc1e",
            "default_route_table_id": "rtb-0b03085d904cddf10",
            "default_security_group_id": "sg-0dfbf65d88846de81",
            "dhcp_options_id": "dopt-01d43f68",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-052588afdee8dc628",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b03085d904cddf10",
            "owner_id": "238747170134",
            "tags": {
              "Name": "bigfish-Prod-vpc",
              "Terraform-prod": "true"
            }
          }
        }
      ]
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "each": "list",
      "provider": "provider.aws"
    }
  ]
}